--- a/assets/css/proofratings-dashboard.css
+++ b/assets/css/proofratings-dashboard.css
@@ -25,8 +25,8 @@
     border-radius: 100px;
     padding-inline-start: 35px;
     transform: translateX(-50%);
-    background: url(../images/bolt.svg) no-repeat left center;
-    background-color: #4123FF;
+    background: url(../images/flash.svg) no-repeat left center;
+    background-color: #2C3149;
     background-position-x: 13px;
     background-size: 16px auto;
 }
