--- a/assets/css/proofratings-admin.css
+++ b/assets/css/proofratings-admin.css
@@ -253,8 +253,10 @@ input[type="checkbox"].checkbox-yesno:checked:after {content: "Yes";}
     padding-right: 40px;
     position: static;
     display: inline-flex;
-    transform: scale(0.85);
-    clip-path: polygon(0 -30px, calc(100% - 2px) -30px, calc(100% - 2px) calc(100% - 5px), 2px calc(100% - 5px));
+    min-width: 1050px;    
+    transform: scale(0.76);
+    transform-origin: left;
+    clip-path: polygon(2px -30px, calc(100% - 2px) -30px, calc(100% - 2px) calc(100% - 5px), 2px calc(100% - 5px));
 }
 
 .proofratings-banner-badge .proofratings-banner-close {display: none!important}
@@ -532,6 +534,8 @@ table.table-review-sites .message-pending-connections {color: var(--text_color_g
 
 table.table-review-sites.table-location-overall {filter: blur(2px); pointer-events: none;}
 
+table.table-review-sites .label-switch-checkbox {font-size: 12px}
+
 .email-reporting-wrap {gap: 40px; display: flex; align-items: flex-start}
 .email-reporting-wrap .form-table {max-width: 900px}
 
@@ -609,6 +613,8 @@ form.form-submit-ticket textarea {min-height: 100px;}
 .badge-items-grid .preview-widget {min-height: 195px; margin-bottom: 10px; display: flex; align-items: center}
 .badge-items-grid .preview-widget .proofratings-badge.proofratings-badge-narrow {min-width: 350px; transform: scale(0.85)}
 .badge-items-grid .preview-widget .proofratings-widget.proofratings-widget-rectangle {transform: scale(0.80)}
+.badge-items-grid .preview-widget .proofratings-banner-badge {transform-origin: center}
+
 
 .label-switch-checkbox {gap: 9px; display: inline-flex; align-items: center}
 .label-switch-checkbox span {line-height: 1; position: relative; top: -1px; color: #6E7289; }
