--- a/assets/css/proofratings-admin.css
+++ b/assets/css/proofratings-admin.css
@@ -241,21 +241,18 @@ input[type="checkbox"].checkbox-yesno:checked:after {content: "Yes";}
 
 #sites-square-badge-customize {display: none}
 
-.proofratings-widget-grid-basic {
-    padding: 5px 20px 20px;
-    background-color: #fff;
-}
+.proofratings-widget-grid-basic {padding: 5px 20px 20px; background-color: #fff}
 
 .proofratings-settings-wrap .proofratings-widget.proofratings-widget-rectangle .rating-title {margin: 0 0 8px 0}
 
 .proofratings-banner-badge {
     padding-left: 40px;
     padding-right: 40px;
-    position: static;
+    position: static!important;
     display: inline-flex;
     min-width: 1050px;    
-    transform: scale(0.76);
-    transform-origin: left;
+    transform: scale(0.76)!important;
+    transform-origin: left!important;
     clip-path: polygon(2px -30px, calc(100% - 2px) -30px, calc(100% - 2px) calc(100% - 5px), 2px calc(100% - 5px));
 }
 
@@ -613,8 +610,6 @@ form.form-submit-ticket textarea {min-height: 100px;}
 .badge-items-grid .preview-widget {min-height: 195px; margin-bottom: 10px; display: flex; align-items: center}
 .badge-items-grid .preview-widget .proofratings-badge.proofratings-badge-narrow {min-width: 350px; transform: scale(0.85)}
 .badge-items-grid .preview-widget .proofratings-widget.proofratings-widget-rectangle {transform: scale(0.80)}
-.badge-items-grid .preview-widget .proofratings-banner-badge {transform-origin: center}
-
 
 .label-switch-checkbox {gap: 9px; display: inline-flex; align-items: center}
 .label-switch-checkbox span {line-height: 1; position: relative; top: -1px; color: #6E7289; }
