--- a/assets/css/proofratings-admin.css
+++ b/assets/css/proofratings-admin.css
@@ -657,3 +657,19 @@ form.form-submit-ticket textarea {min-height: 100px;}
     bottom: -40px;
     pointer-events: none;
 }
+
+.billing-title {color: #000; font-size: 20px; font-weight: bold; margin-top: 32px; margin-bottom: 16px}
+
+.billing-item {font-size: 15px; padding-block: 8px; margin-bottom: -1px; border-block: 1px solid #b6b8c5}
+.billing-item a {text-decoration: none}
+.billing-item .billing-name {color: #2f2f37; font-size: 15px; margin-bottom: 5px; font-weight: bold}
+.billing-item .billing-name span {font-weight: normal; font-size: 90%;}
+.billing-item .billing-name span.status {color: green; font-size: 110%; font-weight: bold; margin-block-start: 10px;}
+
+.billing-item .billing-meta {color: #2f2f37; font-size: 13px; margin-bottom: 2px}
+.billing-item .billing-footer a {color: #4980D1; font-weight: bold;}
+
+
+ul.subscription-invoices {list-style: none; padding: 0; margin: 0}
+ul.subscription-invoices > li {padding-inline-start: 40px; background: url(../images/file-invoice-dollar.svg) no-repeat left center; background-size: auto 60%}
+
