--- a/assets/css/proofratings-admin.css
+++ b/assets/css/proofratings-admin.css
@@ -1297,3 +1297,48 @@ ul.subscription-invoices>li {
 .swal2-container .swal2-icon .swal2-icon-content {
     font-size: 2em;
 }
+
+.proofratings-customer-card {
+    margin-bottom: 40px;
+}
+
+.proofratings-customer-card .card-details {
+    width: 100%;
+    height: 40px;
+    font-size: 15px;
+    background: #fff;
+    border-radius: 4px;
+    max-width: 320px;
+    display: flex;
+    box-sizing: border-box;
+    border: 1px solid #7f8393;
+    transition: border-color .3s ease, box-shadow .3s ease;
+}
+
+.proofratings-customer-card .card-details:hover,
+.proofratings-customer-card .card-details:focus {
+    border-color: var(--primary_color);
+}
+
+.proofratings-customer-card .card-details .card-input {
+    flex: 2;
+    width: auto;
+    min-width: 0;
+    border: none !important;
+    outline: none !important;
+    box-shadow: none !important;
+}
+
+.proofratings-customer-card .card-details .card-input.card-number {
+    flex: 9;
+    padding-left: 40px;
+    background: url(../images/icon-credit-card.svg) no-repeat 10px center;
+    background-size: 20px auto;
+}
+
+.proofratings-customer-card .card-details .card-input.card-expiry {
+    flex: 3;
+    min-width: 65px;
+    padding-left: 0;
+    text-align: right;
+}
