--- a/assets/css/proofratings-admin.css
+++ b/assets/css/proofratings-admin.css
@@ -28,11 +28,12 @@
 
 .button {
     text-align: center;
+    padding: 4px 20px;
+    font-weight: 500;
 }
 
 .button.button-primary {
-    padding: 4px 20px;
-    font-weight: 500;
+    
     background-color: var(--primary_color)
 }
 
@@ -40,6 +41,7 @@
 .button.button-primary:focus {
     background-color: #2a0fda
 }
+
 
 .button.btn-save {
     min-width: 100px;
@@ -1302,7 +1304,31 @@ ul.subscription-invoices>li {
     margin-bottom: 40px;
 }
 
+.proofratings-customer-card h3 {
+    margin: 0 0 15px 0;
+}
+
 .proofratings-customer-card .card-details {
+    display: flex;
+    column-gap: 20px;
+    align-items: center;
+    padding-inline: 10px;
+}
+
+.proofratings-customer-card .card-details .card-number {
+    font-weight: bold;
+    font-size: 17px;
+}
+
+.proofratings-customer-card .card-details .expiry {
+    margin-left: auto;
+}
+
+.proofratings-customer-card .card-details .expiry p {
+    margin: 0;
+}
+
+.proofratings-customer-card .card-form {
     width: 100%;
     height: 40px;
     font-size: 15px;
@@ -1315,12 +1341,12 @@ ul.subscription-invoices>li {
     transition: border-color .3s ease, box-shadow .3s ease;
 }
 
-.proofratings-customer-card .card-details:hover,
-.proofratings-customer-card .card-details:focus {
+.proofratings-customer-card .card-form:hover,
+.proofratings-customer-card .card-form:focus {
     border-color: var(--primary_color);
 }
 
-.proofratings-customer-card .card-details .card-input {
+.proofratings-customer-card .card-form .card-input {
     flex: 2;
     width: auto;
     min-width: 0;
@@ -1329,15 +1355,27 @@ ul.subscription-invoices>li {
     box-shadow: none !important;
 }
 
-.proofratings-customer-card .card-details .card-input.card-number {
+.proofratings-customer-card .card-form .card-input.card-number {
     flex: 9;
     padding-left: 40px;
     background: url(../images/icon-credit-card.svg) no-repeat 10px center;
     background-size: 20px auto;
 }
 
-.proofratings-customer-card .card-details .card-input.card-expiry {
+.proofratings-customer-card .card-form .card-input.card-expiry {
     flex: 3;
     min-width: 65px;
     padding-left: 0;
+}
+
+.proofratings-customer-card.proofratings-customer-card-editing .card-details,
+.proofratings-customer-card.proofratings-customer-card-editing .button-card-form,
+.proofratings-customer-card:not(.proofratings-customer-card-editing) .card-form,
+.proofratings-customer-card:not(.proofratings-customer-card-editing) .update-card-buttons {
+    display: none
+}
+
+.proofratings-customer-card .card-action {
+    margin-top: 15px;
+    display: flex;
 }
